Fix navbar collapsing issue

--- a/webapp/src/styles/Documentation.module.css
+++ b/webapp/src/styles/Documentation.module.css
@@ -33,7 +33,6 @@
 .codeBlock {
     padding-left: 5%;
     padding-top: 3%;
-    padding-bottom: 3%;
 }
 
 .codeStyle {
